--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -6,3 +6,18 @@
 .icon-cancel-circled {
   color: #D43833;
 }
+
+#file-loader {
+  font-size: 12px;
+}
+
+span.reload {
+  margin-top: 0px !important;
+  font-size: 14px !important;
+}
+button.reload {
+  padding-top: 4px;
+  padding-bottom: 0px;
+  padding-right: 10px;
+}
+
