--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -1,4 +1,6 @@
-
+/*
+  General UI
+ */
 .icon-check {
   color: #29A03B;
 }
@@ -22,11 +24,28 @@ button.reload {
 }
 
 /*
+  Grid
+  NOTE: I had to remove box-sizing:border-box from photon.css in order to not mess up slickgrid
+ */
+
+#grid {
+  width: 100%;
+  height: 200px;
+  position: fixed;
+  bottom: 0;
+}
+
+/*
   Test specific CSS
 */
 
 .test-results {
   padding: 5px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: calc(100% - 200px);
+  overflow-y: scroll;
 }
 .test-results .test {
   margin: 3px;
@@ -49,7 +68,7 @@ button.reload {
 
 .test-results .test .message {
   float:left;
-  width: calc(100% - 220px);
+  width: calc(100% - 245px);
 }
 
 .test-results .test .test-header {
@@ -69,4 +88,5 @@ button.reload {
 .test-results .test .fingerprint {
   width: 200px;
   float: right;
+  margin-right: 25px;
 }
