--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -4,12 +4,15 @@
  body {
   height: 100%;
   padding: 0;
+  padding-top: 48px;
   margin: 0;
   font-family: system, -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue", Helvetica, "Segoe UI", sans-serif;
-  font-size: 13px;
-  line-height: 1.6;
+  font-size: 16px;
+  line-height: 1.4;
   color: #333;
-  background-color: transparent;
+  /* background-color: transparent; */
+  background-color: #F7F6F5;
+  box-sizing: border-box;
  }
 .icon-check {
   color: #29A03B;
@@ -38,9 +41,17 @@ button.reload {
 }
 
 #spreadsheet-input {
-  width: 155px;
-  height: 20px;
-  font-size: 10px;
+  width: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+  font-size: 24px;
+  padding: 1em;
+}
+
+#spreadsheet-input::-webkit-input-placeholder {
+  text-align: center;
 }
 button.tabletop-loader {
   width: 30px;
@@ -52,16 +63,29 @@ button.tabletop-loader {
   margin-left: 2px;
 }
 
+#info-top-bar {
+  padding: 1em;  
+  padding-top: 32px;
+  width: 100%;
+  display: block;
+  background-color: rgba(255,255,255,0.9);
+  position: fixed;
+  top: 0;
+}
+
 /*
   Grid
   NOTE: I had to remove box-sizing:border-box from photon.css in order to not mess up slickgrid
  */
 
 #grid {
+  font-size: 12px;
+  box-sizing: content-box !important;
   width: 100%;
   height: 200px;
   position: fixed;
   bottom: 0;
+  background-color: rgba(255,255,255,0.7);
 }
 
 .changed {
@@ -69,16 +93,18 @@ button.tabletop-loader {
 }
 
 .steps {
-  /* temp styling */
+  /* temp styling 
   position: absolute;
   top: 30;
-  height: calc(100% - 230px);
+  height: calc(100% - 230px); */
   overflow-y: scroll;
+  padding: 1.5em;
 }
 .step {
   float:left;
   clear:left;
   width: 100%;
+  /*margin-bottom: 200px;*/
 
 }
 /* =============================================================================
@@ -88,7 +114,26 @@ STEP  1
 
 }
 
+.step-1-data #file-loader {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
 
+.step-1-data #file-loader-button {
+  display: block;
+  text-align: center;
+  background-color: #46CC69;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  font-size: 24px;
+  padding: 1em;
+}
 
 
 /* =============================================================================
@@ -100,21 +145,32 @@ General Suites and test
 }
 
 .suite .test {
-  margin: 3px;
-  padding: 10px;
-  margin-top: 10px;
-  width: 100%;
-  float: left;
-  clear: left;
+  /*
+  min-width: 100px;
+  max-width: 100%;
+  */
+  margin: 0.2em;
+  padding: 1em;
+  margin-top: 1em;
+  width: 28%;
+  min-height: 150px;
+  height: auto;
+  display: inline-block;
+  vertical-align: top;
   background-color: white;
   border-radius: 3px;
+  opacity: 0.2;
 }
 .suite .test.active {
-  border: 1px solid orange;
+  border: 1px solid black;
+  opacity: 1;
 }
+
+/*
 .suite .test:nth-child(odd) {
   background-color: #efefef;
 }
+*/
 
 .suite .test .passfail {
   width: 20px;
@@ -122,8 +178,9 @@ General Suites and test
 }
 
 .suite .test .message {
+  font-size: 14px;
   float:left;
-  width: calc(100% - 245px);
+  /*width: calc(100% - 245px);*/
 }
 
 .suite .test .test-header {
@@ -152,12 +209,35 @@ STEP  2
 .step-2-select {
   padding: 5px;
   width: 100%;
+  /*opacity: 0.2; */
+  display: none;
+  margin-bottom: 200px;
 }
 .step-2-select .suite {
   opacity: 0.2;
 }
 .step-2-select .suite.active {
   opacity: 1;
+}
+button.run-tests {
+  /*
+  font-size: 1.8em;
+  padding: 1em;
+  width: 100%;
+  display: block;
+  text-align: center;
+  */
+  display: block;
+  text-align: center;
+  background-color: #ED4224;
+  border: 0;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 48px;
+  color: white;
+  font-size: 24px;
+  padding: 1em;
 }
 
 /* =============================================================================
@@ -166,6 +246,8 @@ STEP  3
 .step-3-results {
   padding: 5px;
   width: 100%;
+  padding-bottom: 300px;
+  display: none;
 }
 
 /* =============================================================================
