add pointer for fingerprint

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -303,6 +303,7 @@ General Suites and test
   width: 200px;
   float: right;
   margin-right: 25px;
+  cursor: pointer;
 }
 
 /* =============================================================================
