implement navigation buttons

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -50,10 +50,28 @@ button.reload {
   top: 0;
 }
 
-/*
-  Grid
+
+/* =============================================================================
+Navigation buttons
+============================================================================= */
+#nav-buttons {
+  position: fixed;
+  top: 100;
+  right: 20px;
+
+}
+#back-button {
+
+}
+#forward-button {
+
+}
+
+
+/* =============================================================================
+Grid
   NOTE: I had to remove box-sizing:border-box from photon.css in order to not mess up slickgrid
- */
+============================================================================= */
 
 #grid {
   font-size: 12px;
@@ -84,6 +102,7 @@ button.reload {
   /*margin-bottom: 200px;*/
 
 }
+
 /* =============================================================================
 STEP  1
 ============================================================================= */
