--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -78,7 +78,7 @@ Grid
   font-size: 12px;
   box-sizing: content-box !important;
   width: 100%;
-  height: 200px;
+  max-height: 200px;
   position: fixed;
   bottom: 0;
   background-color: rgba(255,255,255,0.7);
