tweak some styling for the table now that it's on the side

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -217,6 +217,10 @@ STEP  3
   display: none;
 }
 
+.handsontable td:hover {
+  background-color: aliceblue;
+}
+
 /* =============================================================================
 General Suites and test
 ============================================================================= */
