style tweaks. update npm package license

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -87,7 +87,7 @@ Grid
   right: 0;
   top: 70px;
   bottom: 0;
-  background-color: rgba(255,255,255,0.7);
+  background-color: #EEE;
   overflow: hidden;
   display: none;
 }
