add neutral gray dot for tests that do not necessarily pass nor fail

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -17,6 +17,10 @@
   background-color: #29A03B;
 }
 
+.icon-neutral {
+  background-color: #858585;
+}
+
 .icon-cancel-circled {
   background-color: #D43833;
 }
