--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -85,7 +85,6 @@ Navigation buttons
 }
 #forward-button {
   background-color: #ED4224;
-
 }
 
 
@@ -235,6 +234,68 @@ button.run-tests {
   color: white;
   font-size: 24px;
   padding: 1em;
+}
+
+.test-editor {
+  position: fixed;
+  top: 87px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  border-top: 4px solid #777;
+  background-color: rgba(255, 255, 255, 0.95);
+}
+.test-editor h3 {
+  margin-left: 20px;
+}
+.test-editor input {
+  margin: 20px;
+  border: none;
+  border-bottom: 2px solid white;
+  padding: 3px;
+  outline: none;
+  width: 80%;
+}
+#test-editor-name {
+  font-size: 20px;
+}
+#test-editor-description {
+  font-size: 14px;
+}
+.test-editor input:focus {
+  border-bottom: 2px solid #333;
+}
+#test-editor-js {
+  display: block;
+  margin-left: 20px;
+  width: 100%;
+  height: calc(100% - 250px);
+}
+.CodeMirror {
+  width: 100%;
+  height: 100%;
+}
+
+.test-editor button {
+  display: inline-block;
+  font-size: 16px;
+  border: 0;
+  padding: 0.5em;
+  margin-bottom: 2px;
+  margin-right: 2px;
+  margin-left: 20px;
+  margin-top: 10px;
+  outline: none;
+}
+.test-editor button:hover {
+  box-shadow: 3px 3px 6px #999;
+}
+#cancel-test {
+  background-color: #ccc;
+}
+#save-test {
+  background-color: #ED4224;
+  color: white;
 }
 
 /* =============================================================================
@@ -388,7 +449,7 @@ General Suites and test
 }
 
 .suite .test .onoff {
-  
+
 }
 
 .suite .test.active {
